--- a/src/Pages/Products/Products.css
+++ b/src/Pages/Products/Products.css
@@ -26,19 +26,21 @@
 .price-and-btn{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .cart-btn{
     font-family: 'Poppins';
     text-decoration: none;
-    font-size: 20px;
+    font-size: 18px;
     border-radius: 10px;
     margin-top: 20px;
     margin-bottom: 20px;
-    padding: 15px;
+    padding: 10px 15px;
     background-color: black;
     color: white;
     transition: 0.4s;
+    cursor: pointer;
 }
 
 .cart-btn:hover{
