Added cart page and added stepper to show status

--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -35,8 +35,8 @@
 }
 
 .main-banner img{
-    height: 600px;
-    width: 666px;
+    /* height: 600px;
+    width: 666px; */
     margin-right: 119px;
 }
 
