--- a/src/Pages/Products/Products.css
+++ b/src/Pages/Products/Products.css
@@ -2,7 +2,6 @@
     border-radius: 20px;
     height: 333px;
     width: 500px;
-    margin-top: 20px;
 }
 
 .products-container{
@@ -17,10 +16,10 @@
 
 .product{
     background-color: #F4F6F5;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 20px;
     border-radius: 20px;
     margin: 20px;
+    cursor: pointer;
 }
 
 .price-and-btn{
