Added stripe payment, cartItem count on nav, full checkout functionality and order completion page.

--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -2,7 +2,7 @@
     height: 60vh;
 }
 
-input{
+.sign-up-container input{
     border-radius: 30px;
     border: 1px solid gray;
     width: 400px;
@@ -11,16 +11,16 @@ input{
     box-sizing: border-box;
 }
 
-input[placeholder]{
+.sign-up-container input[placeholder]{
     font-family: 'Poppins';
 }
 
-a{
+.sign-up-container a{
     text-decoration: none;
     color: rgb(19, 100, 251);
     transition: 0.4s;
 }
 
-a:hover{
+.sign-up-container a:hover{
     color: rgb(74, 132, 240);
 }
