--- a/src/components/OrderSummary/OrderSummary.css
+++ b/src/components/OrderSummary/OrderSummary.css
@@ -1,7 +1,7 @@
 .order-summary{
     font-family: "Poppins";
     margin-left: 100px;
-    background-color: #F4F6F5;
+    /* background-color: #F4F6F5; */
     padding: 20px;
     margin-right: 50px;
     border-radius: 20px;
