--- a/src/Pages/Products/Products.css
+++ b/src/Pages/Products/Products.css
@@ -20,28 +20,15 @@
     border-radius: 20px;
     margin: 20px;
     cursor: pointer;
+    transition: 300ms;
+}
+
+.product:hover{
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .price-and-btn{
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.cart-btn{
-    font-family: 'Poppins';
-    text-decoration: none;
-    font-size: 18px;
-    border-radius: 10px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding: 10px 15px;
-    background-color: black;
-    color: white;
-    transition: 0.4s;
-    cursor: pointer;
-}
-
-.cart-btn:hover{
-    background-color: rgba(0, 0, 0, 0.646);
 }
