--- a/src/Pages/SingleProductPage/SingleProductPage.css
+++ b/src/Pages/SingleProductPage/SingleProductPage.css
@@ -4,7 +4,7 @@
     gap: 30px;
 }
 
-.product-name{
+.product-name-single{
     font-weight: bold;
     font-size: 40px;
     margin-bottom: 20px;
@@ -17,8 +17,8 @@
 }
 
 .image{
-    height: 333px;
-    width: 500px;
+    height: 283.50px;
+    width: 504px;
 }
 
 .quantity{
