created mobile responsive design

--- a/src/Pages/Checkout/Checkout.css
+++ b/src/Pages/Checkout/Checkout.css
@@ -1,5 +1,10 @@
-.checkout-container{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    
+.checkout-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+@media (max-width: 900px) {
+  .checkout-container {
+    grid-template-columns: 1fr;
+  }
 }
