--- a/src/Pages/Cart/Cart.css
+++ b/src/Pages/Cart/Cart.css
@@ -1,106 +1,144 @@
-.cart-container{
-    margin-left: 100px;
-    margin-right: 100px;
-    font-family: "poppins";
+.cart-container {
+  font-family: "poppins";
+  max-width: 1300px;
+  margin: auto;
 }
 
 .items-container {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    border-bottom: 1px solid #ddd;
-    height: 50px;
-    margin-bottom: 0px;
-    text-align: center;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  border-bottom: 1px solid #ddd;
+  height: 50px;
+  margin-bottom: 0px;
+  text-align: center;
 }
 
-.cartItem{
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    border-bottom: 1px solid #ddd;
-    min-height: 25vh;
-    align-items: center;
-    text-align: center;
+.cartItem {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  min-height: 25vh;
+  align-items: center;
+  text-align: center;
 }
 
-.remove-btn{
-    cursor: pointer;
-    font-size: 20px;
-    background: transparent;
-    border: 0px solid black;
-    transition: 400ms;
+.remove-btn {
+  cursor: pointer;
+  font-size: 20px;
+  background: transparent;
+  border: 0px solid black;
+  transition: 400ms;
 }
 
-.remove-btn:hover{
-    color: orangered;
+.remove-btn:hover {
+  color: orangered;
 }
 
-.item-quantity{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
+.item-quantity {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
 }
 
-.item{
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
+.item {
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 
-.cartItem img{
-    width: 50%;
-    height: 142px;
+.cartItem img {
+  width: 50%;
+  height: 142px;
 }
 
-.total-price{
-    margin-top: 20px;
-    display: flex;
-    justify-content: flex-end;
+.total-price {
+  margin-top: 20px;
+  display: flex;
+  justify-content: flex-end;
 }
 
-.prices{
-    font-size: 22px;
-    font-weight: bold;
+.prices {
+  font-size: 22px;
+  font-weight: bold;
 }
 
-.grand-price{
-    font-size: 30px;
-    font-weight: bolder;
+.grand-price {
+  font-size: 30px;
+  font-weight: bolder;
 }
 
-.cart-buttons{
-    display: flex;
-    justify-content: flex-end;
-    gap: 10px;
-    margin-top: 20px;
+.cart-buttons {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+  margin-top: 20px;
 }
 
-.go-back-btn{
-    font-family: 'Poppins';
-    font-weight: 500;
-    font-size: 15px;
-    background-color: white;
-    color: black;
-    padding: 10px 30px;
-    transition: 0.4s;
-    cursor: pointer;
+.go-back-btn {
+  font-family: "Poppins";
+  font-weight: 500;
+  font-size: 15px;
+  background-color: white;
+  color: black;
+  padding: 10px 30px;
+  transition: 0.4s;
+  cursor: pointer;
 }
 
-.go-back-btn:hover{
-    background-color: rgb(178, 177, 177);
+.go-back-btn:hover {
+  background-color: rgb(178, 177, 177);
 }
 
-.checkout-btn{
-    font-family: 'Poppins';
-    font-weight: 500;
-    font-size: 15px;
-    background-color: black;
-    color: white;
-    padding: 10px 30px;
-    transition: 0.4s;
-    cursor: pointer;
+.checkout-btn {
+  font-family: "Poppins";
+  font-weight: 500;
+  font-size: 15px;
+  background-color: black;
+  color: white;
+  padding: 10px 30px;
+  transition: 0.4s;
+  cursor: pointer;
 }
 
-.checkout-btn:hover{
-    background-color: rgba(0, 0, 0, 0.646);
+.checkout-btn:hover {
+  background-color: rgba(0, 0, 0, 0.646);
+}
+
+@media (max-width: 1367px) {
+  .cart-container {
+    max-width: 1200px;
+  }
+}
+
+@media (max-width: 1300px) {
+  .cart-container {
+    max-width: 1000px;
+  }
+}
+
+@media (max-width: 1100px) {
+  .cart-container {
+    max-width: 800px;
+  }
+  .cartItem {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+  }
+}
+
+@media (max-width: 812px) {
+  .cart-container {
+    max-width: 600px;
+  }
+  .cartItem {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media (max-width: 600px) {
+  .cart-container {
+    max-width: 350px;
+  }
 }
