--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,20 +1,16 @@
 .main-banner {
+  max-width: 1300px;
+  margin: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #f4f6f5;
   border-radius: 30px;
-  margin-top: 40px;
-  margin-left: 100px;
-  margin-right: 100px;
-  padding: 0px 120px;
+  padding: 0px 100px;
 }
 
 .banner-items h1 {
-  font-weight: 900;
-  font-style: normal;
-  font-size: 96px;
-  line-height: 100px;
+  font-size: 50px;
 }
 
 .yellow {
@@ -23,25 +19,61 @@
 }
 
 .banner-items p {
-  font-weight: 400;
-  font-size: 32px;
-  line-height: 48px;
-  letter-spacing: -0.05em;
+  font-size: 20px;
   color: #191818;
 }
 
 .shopbtn {
   font-family: "Poppins";
   font-weight: 500;
-  font-size: 25px;
+  font-size: 15px;
   background-color: black;
   color: white;
-  padding: 10px 30px;
+  padding: 8px 20px;
   border-radius: 10px;
   transition: 0.4s;
   cursor: pointer;
+  margin: 10px 0px;
 }
 
 .shopbtn:hover {
   background-color: rgba(0, 0, 0, 0.646);
+}
+
+@media (max-width: 1367px) {
+  .main-banner {
+    max-width: 1200px;
+  }
+
+  .main-banner img {
+    height: 400px;
+  }
+}
+
+@media (max-width: 1300px) {
+  .main-banner {
+    max-width: 1000px;
+  }
+}
+
+@media (max-width: 1100px) {
+  .main-banner {
+    max-width: 800px;
+  }
+}
+
+@media (max-width: 812px) {
+  .main-banner {
+    max-width: 600px;
+  }
+  .main-banner img {
+    display: none;
+  }
+}
+
+@media (max-width: 600px) {
+  .main-banner {
+    max-width: 350px;
+    padding: 0px 20px;
+  }
 }
