--- a/src/components/Categories/Categories.css
+++ b/src/components/Categories/Categories.css
@@ -1,60 +1,74 @@
-.main h1{
-    font-weight: 900;
-    font-size: 48px;
-    line-height: 50px;
-    letter-spacing: 0.06em;
-    padding: 50px 100px 20px 100px;
+.categoriesContainer {
+  max-width: 1300px;
+  margin: auto;
 }
 
-.grid{
-    display: flex;
-    justify-content: space-between;
-    margin-left: 100px;
-    margin-right: 100px;
+.main h1 {
+  font-weight: 900;
+  font-size: 50px;
+  line-height: 50px;
+  letter-spacing: 0.06em;
 }
 
-.text h5{
-    font-style: normal;
-    font-weight: 500;
-    font-size: 32px;
-    line-height: 50px;
-    letter-spacing: -0.04em;
-    color: #191919;
-    margin-bottom: 10px;
+.categories {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
-.text p{
-    margin-top: 10px;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 50px;
-    letter-spacing: -0.04em;
-    color: #7F7F7F;
+.btn {
+  font-family: "Poppins";
+  text-decoration: none;
+  font-size: 20px;
+  width: 210px;
+  height: 80px;
+  text-transform: capitalize;
+  transition: 400ms;
+  background-color: white;
 }
 
-.categories{
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    row-gap: 20px;
-    column-gap: 10px;
-    margin-left: 100px;
-    margin-right: 70px;
-    margin-bottom: 20px;
+.btn:hover {
+  background-color: #ebd96b;
+  cursor: pointer;
 }
 
-.btn{
-    font-family: 'Poppins';
-    text-decoration: none;
-    font-size: 20px;
-    width: 210px;
+@media (max-width: 1367px) {
+  .categoriesContainer {
+    max-width: 1100px;
+  }
+}
+
+@media (max-width: 1300px) {
+  .categoriesContainer {
+    max-width: 1000px;
+  }
+}
+
+@media (max-width: 1100px) {
+  .categoriesContainer {
+    max-width: 800px;
+  }
+}
+
+@media (max-width: 812px) {
+  .categoriesContainer {
+    max-width: 600px;
+  }
+}
+
+@media (max-width: 600px) {
+  .categoriesContainer {
+    max-width: 350px;
+  }
+
+  .btn {
+    width: 100%;
     height: 80px;
-    text-transform: capitalize;
-    transition: 400ms;
-    background-color: white;
-}
+  }
 
-.btn:hover{
-    background-color: #EBD96B;
-    cursor: pointer;
+  .categories {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+  }
 }
