--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,43 +1,48 @@
-.footer{
-    margin-top: 50px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 90px 100px;
-    background-color: rgb(0, 0, 0);
-    font-family: 'Poppins';
+.footerDiv {
+  background-color: rgb(0, 0, 0);
 }
 
-.footer h3{
-    color: white;
-    font-size: 40px;
+.footer {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1300px;
+  margin: auto;
+  flex-wrap: wrap;
+  gap: 30px;
+  padding: 90px 100px;
 }
 
-.footer small{
-    color: white;
-    font-size: 20px;
-    color: gray;
-}
-
-.right-div{
-    color: white;
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.side-one p{
+.left-div p {
+  font-family: "Poppins";
+  color: white;
   font-size: 25px;
 }
 
-.icons{
-    margin-top: 30px;
+.footer small {
+  color: white;
+  font-size: 20px;
+  color: gray;
 }
 
-.icons i{
-    background-color: #EBD96B;
-    font-size: 25px;
-    margin-right: 14px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 8px;
-    border-radius: 12px;
+.side-one {
+  color: white;
+}
+
+.side-one p {
+  font-size: 25px;
+}
+
+.icons {
+  display: flex;
+  gap: 10px;
+  margin-top: 30px;
+}
+
+.icons i {
+  background-color: #ebd96b;
+  font-size: 25px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 8px;
+  border-radius: 12px;
 }
