--- a/src/components/AdminSidebar/AdminSidebar.css
+++ b/src/components/AdminSidebar/AdminSidebar.css
@@ -1,36 +1,42 @@
-.sidebar{
-    max-width: 300px;
-    margin-left: 30px;
-    margin-top: 30px;
-    border-right: 1px solid #ddd;
-    min-height: 95vh;
+.sidebar {
+  /* position: fixed; */
+  max-width: 300px;
+  /* margin-left: 30px; */
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  margin-top: 30px;
+  border-right: 1px solid #ddd;
+  /* min-height: 95vh; */
 }
 
-.sidebar-logo{
-    margin-bottom: 50px;
-    margin-right: 30px;
+.sidebar-logo {
+  display: flex;
+  align-items: center;
+  /* margin-bottom: 50px;
+  margin-right: 30px; */
 }
 
-.link-item{
-    text-decoration: none;
-    color: black;
+.link-item {
+  text-decoration: none;
+  color: black;
 }
 
-.sidebar-item{
-    margin: 10px 0px;
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    font-family: 'Poppins';
-    font-size: 24px;
-    transition: 300ms;
+.sidebar-item {
+  /* margin: 10px 0px; */
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-family: "Poppins";
+  font-size: 24px;
+  transition: 300ms;
 }
 
-.sidebar-item:hover{
-    background-color: #EBD96B;
+.sidebar-item:hover {
+  background-color: #ebd96b;
 }
 
-ul{
-    list-style-type: none;
+ul {
+  list-style-type: none;
 }
