--- a/src/components/Brands/Brands.css
+++ b/src/components/Brands/Brands.css
@@ -3,8 +3,9 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   background-color: #ebd96b;
+  gap: 10px;
   padding: 60px 20px;
 }
 
